--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -126,7 +126,7 @@
     }
 
     const redir = (id, term) => {
-        window.location.href = "{{.Site.BaseURL}}" + `${id}#:~:text=${encodeURIComponent(term)}`
+        window.location.href = "{{.Site.BaseURL}}/quartz" + `${id}#:~:text=${encodeURIComponent(term)}`
     }
 
     const source = document.getElementById('search-bar')
